updated styling, changed some content

--- a/index.html
+++ b/index.html
@@ -62,47 +62,80 @@
 
 	<!-- About Section -->
 	<section id="about">
-		<h2>About Us</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet semper lorem.</p>
-	</section>
+		<h2>About Michael Heights Neighborhood Association</h2>
 
-	<!-- Emergency Preparedness Section -->
-	<section id="emergency-preparedness">
-		<h2>Emergency Preparedness</h2>
+		<p>The Michael Heights Neighborhood Association is a volunteer-driven organization committed to enhancing the
+			quality of life in the Michael Heights neighborhood in Tulsa.
+			Our mission is to foster a strong sense of community, ensure the safety and well-being of all residents, and
+			serve as a resource for neighborhood improvement and social connection.</p>
+		<div class="mission">
+			<h3>Our Mission</h3>
+			<p>To build a vibrant, inclusive, and safe community through active engagement, advocacy, and collaboration.
+			</p>
+		</div>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet semper lorem. Vivamus at feugiat nunc.
-		</p>
-		<br>
-		<!-- Checklist -->
-		<div class="checklist">
-			<h3>Lorem Ipsum Checklist</h3>
+		<div class="history">
+			<h3>Our History</h3>
+			<p> PLACEHODER: Fill in some info here about some cool events (block party) and 
+				maybe the Fath.</p>
+		</div>
+
+		<div class="team">
+			<h3>Meet the Team</h3>
 			<ul>
-				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-				<li>Vivamus at feugiat nunc. Sed sit amet semper lorem.</li>
-				<li>Curabitur vitae nisl in erat pharetra finibus.</li>
-				<li>Nulla facilisi. Donec lacinia, velit et laoreet elementum.</li>
-				<li>Phasellus non metus id justo elementum dictum.</li>
+				<li>John Doe </li>
+				<li>Jane Smith  </li>
+				<li>Emily Johnson </li>
 			</ul>
 		</div>
 
-		<!-- Resources -->
-		<div class="resources">
-			<h3>Lorem Ipsum Resources</h3>
-			<ul>
-				<li><a href="#">Lorem Ipsum Resource 1</a></li>
-				<li><a href="#">Lorem Ipsum Resource 2</a></li>
-				<li><a href="#">Lorem Ipsum Resource 3</a></li>
-				<li><a href="#">Lorem Ipsum Resource 4</a></li>
-			</ul>
-		</div>
-
-		<!-- Contact -->
-		<div class="contact">
-			<h3>Lorem Ipsum Contact</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at feugiat nunc. Sed sit amet semper
-				lorem. Curabitur vitae nisl in erat pharetra finibus.</p>
+		<div class="join-us">
+			<h3>Get Involved</h3>
+			<p>If you're passionate about making Michael Heights a better place, we'd love for you to get involved.
+				Whether you're interested in volunteering, attending meetings, or simply staying updated, there's a
+				place for everyone in the association.</p>
+			<a href="#contact">Contact Us</a>
 		</div>
 	</section>
+
+
+	<!-- Emergency Preparedness Section --><!-- Emergency Preparedness Section -->
+<section id="emergency-preparedness">
+    <h2>Emergency Preparedness</h2>
+
+    <p>Being prepared for emergencies is crucial for the safety and well-being of our community. The Michael Heights Neighborhood Association is committed to providing resources and information to help residents prepare for various types of emergencies.</p>
+    <br>
+
+    <!-- Checklist -->
+    <div class="checklist">
+        <h3>Essential Emergency Checklist</h3>
+        <ul>
+            <li>Keep a first aid kit in an easily accessible location.</li>
+            <li>Store at least a three-day supply of non-perishable food and water.</li>
+            <li>Have a flashlight and extra batteries handy.</li>
+            <li>Keep important documents in a fireproof and waterproof container.</li>
+            <li>Know the emergency evacuation routes and have a family meeting point.</li>
+        </ul>
+    </div>
+
+    <!-- Resources -->
+    <div class="resources">
+        <h3>Helpful Emergency Resources</h3>
+        <ul>
+            <li><a href="#">FEMA's Guide to Emergency Preparedness</a></li>
+            <li><a href="#">Local Emergency Services Contact Information</a></li>
+            <li><a href="#">CDC's Emergency Health Tips</a></li>
+            <li><a href="#">Red Cross Emergency Checklist</a></li>
+        </ul>
+    </div>
+
+    <!-- Contact -->
+    <div class="contact">
+        <h3>Contact for Emergency Support</h3>
+        <p>If you have questions or need assistance with emergency preparedness, please reach out to our Emergency Preparedness Committee. We're here to help ensure that every resident is prepared and informed.</p>
+    </div>
+</section>
+
 
 
 	<!-- Events Section -->
